--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.12.1",
     "@headlessui/react": "^1.7.3",
     "@heroicons/react": "^2.0.12",
     "@storybook/addon-actions": "^6.5.12",
@@ -62,6 +63,9 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "@babel/cli": "^7.19.3",
+    "@babel/core": "^7.19.6",
+    "@babel/preset-env": "^7.19.4",
     "@storybook/addon-essentials": "^6.5.12",
     "@storybook/addon-interactions": "^6.5.12",
     "@storybook/addon-links": "^6.5.12",
@@ -86,11 +90,11 @@
     "eslint-plugin-react-hooks": "^4.5.0",
     "eslint-plugin-storybook": "^0.6.6",
     "eslint-plugin-typescript-sort-keys": "^2.1.0",
+    "husky": "^8.0.0",
     "postcss": "^8.4.18",
     "prettier": "^2.6.2",
     "prop-types": "^15.8.1",
     "tailwindcss": "^3.1.8",
-    "webpack": "^5.74.0",
-    "husky": "^8.0.0"
+    "webpack": "^5.74.0"
   }
 }
