--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,42 +1,17 @@
 {
   "compilerOptions": {
-    "allowSyntheticDefaultImports": true,
-    "alwaysStrict": true,
     "baseUrl": "./",
-    "esModuleInterop": true,
-    "importHelpers": true,
-    "jsx": "react",
-    "lib": ["dom", "dom.iterable", "esnext"],
-    "downlevelIteration": true,
-    "module": "esnext",
-    "moduleResolution": "node",
-    "noFallthroughCasesInSwitch": true,
-    "noImplicitAny": true,
-    "noImplicitReturns": true,
-    "noImplicitThis": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
     "paths": {
       "~/*": ["src/*"]
     },
-    "preserveSymlinks": true,
-    "resolveJsonModule": true,
-    "rootDir": "./",
-    "sourceMap": true,
     "strict": true,
-    "strictFunctionTypes": true,
-    "strictNullChecks": true,
-    "strictPropertyInitialization": true,
-    "target": "es6",
-    "allowJs": true,
-    "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
-    "noEmit": true,
-    "isolatedModules": true,
-    "incremental": true,
-    "tsBuildInfoFile": "./.tsbuild/tsbuildinfo",
+    "jsx": "react",
+    "declaration": true,
+    "esModuleInterop": true,
     "outDir": "dist",
-    "suppressImplicitAnyIndexErrors": true
+    "target": "es6",
+    "module": "es6",
+    "moduleResolution": "node"
   },
   "exclude": [".storybook", "node_modules", "public", "./eslintrc.js"],
   "include": ["src"]
