--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "deploy": "gh-pages -d example/build"
   },
   "peerDependencies": {
-    "react": "^17.0.0"
+    "react": "^18.2.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^4.2.4",
@@ -52,15 +52,16 @@
     "gh-pages": "^2.2.0",
     "microbundle-crl": "^0.13.10",
     "npm-run-all": "^4.1.5",
-    "postcss": "^7",
+    "postcss": "^8.4.18",
+    "postcss-loader": "^7.0.1",
     "postcss-cli": "^9.0.1",
     "prettier": "^2.0.4",
-    "react": "^16.13.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-app-rewire-alias": "^1.1.3",
-    "react-dom": "^16.13.1",
     "react-icons": "^4.3.1",
     "react-scripts": "^3.4.1",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat",
+    "tailwindcss": "^3.1.8",
     "typescript": "^3.7.5"
   },
   "files": [
