--- a/package.json
+++ b/package.json
@@ -53,19 +53,22 @@
     "microbundle-crl": "^0.13.10",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.18",
-    "postcss-loader": "^7.0.1",
     "postcss-cli": "^9.0.1",
+    "postcss-loader": "^7.0.1",
     "prettier": "^2.0.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "react-app-rewire-alias": "^1.1.3",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.3.1",
     "react-scripts": "^3.4.1",
-    "tailwindcss": "^3.1.8",
     "tailwind-merge": "^1.6.2",
+    "tailwindcss": "^3.1.8",
     "typescript": "^3.7.5"
   },
   "files": [
     "dist"
-  ]
+  ],
+  "dependencies": {
+    "@headlessui/react": "^1.7.3"
+  }
 }
