--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "dist"
   ],
   "dependencies": {
-    "@headlessui/react": "^1.7.3"
+    "@headlessui/react": "^1.7.3",
+    "@heroicons/react": "^2.0.12"
   }
 }
