--- a/package.json
+++ b/package.json
@@ -22,7 +22,11 @@
     "test:watch": "react-scripts test --env=jsdom",
     "predeploy": "cd example && yarn install && yarn run build",
     "deploy": "gh-pages -d example/build",
-    "clean": "rm -rf dist && rm -rf node_modules && cd example && rm -rf node_modules"
+    "clean": "rm -rf dist && rm -rf node_modules && cd example && rm -rf node_modules",
+    "lint": "eslint \"src/**/*.{ts,tsx,md}\"  --cache",
+    "lint:fix": "eslint \"src/**/*.{ts,tsx,md}\" --fix",
+    "ts": "tsc --noEmit --skipLibCheck",
+    "checks": "yarn lint && yarn ts"
   },
   "peerDependencies": {
     "react": "^18.2.0"
@@ -49,6 +53,7 @@
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-react": "^7.17.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-standard": "^4.0.1",
     "gh-pages": "^2.2.0",
     "microbundle-crl": "^0.13.10",
@@ -71,6 +76,8 @@
   ],
   "dependencies": {
     "@headlessui/react": "^1.7.3",
-    "@heroicons/react": "^2.0.12"
+    "@heroicons/react": "^2.0.12",
+    "eslint-plugin-jest": "^27.1.3",
+    "eslint-plugin-typescript-sort-keys": "^2.1.0"
   }
 }
