--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.3",
     "@heroicons/react": "^2.0.12",
+    "@tailwindcss/forms": "^0.5.3",
     "eslint-plugin-jest": "^27.1.3",
     "eslint-plugin-typescript-sort-keys": "^2.1.0"
   }
