--- a/package.json
+++ b/package.json
@@ -26,12 +26,24 @@
     "lint": "eslint \"src/**/*.{ts,tsx,md}\"  --cache",
     "lint:fix": "eslint \"src/**/*.{ts,tsx,md}\" --fix",
     "ts": "tsc --noEmit --skipLibCheck",
-    "checks": "yarn lint && yarn ts"
+    "checks": "yarn lint && yarn ts",
+    "storybook": "start-storybook -p 6006 -s public",
+    "build-storybook": "build-storybook -s public"
   },
   "peerDependencies": {
     "react": "^18.2.0"
   },
   "devDependencies": {
+    "@storybook/addon-actions": "^6.5.13",
+    "@storybook/addon-essentials": "^6.5.13",
+    "@storybook/addon-interactions": "^6.5.13",
+    "@storybook/addon-links": "^6.5.13",
+    "@storybook/builder-webpack4": "^6.5.13",
+    "@storybook/manager-webpack4": "^6.5.13",
+    "@storybook/node-logger": "^6.5.13",
+    "@storybook/preset-create-react-app": "^3.2.0",
+    "@storybook/react": "^6.5.13",
+    "@storybook/testing-library": "^0.0.13",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
@@ -79,6 +91,20 @@
     "@heroicons/react": "^2.0.12",
     "@tailwindcss/forms": "^0.5.3",
     "eslint-plugin-jest": "^27.1.3",
-    "eslint-plugin-typescript-sort-keys": "^2.1.0"
+    "eslint-plugin-typescript-sort-keys": "^2.1.0",
+    "tsconfig-paths-webpack-plugin": "^4.0.0"
+  },
+  "eslintConfig": {
+    "extends": "react-app",
+    "overrides": [
+      {
+        "files": [
+          "**/*.stories.*"
+        ],
+        "rules": {
+          "import/no-anonymous-default-export": "off"
+        }
+      }
+    ]
   }
 }
