Molecule documentation and name update to Kickass UI

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-tailwind-components",
+  "name": "armony-i",
   "version": "0.0.1",
   "description": "A React Tailwind Component Library",
   "author": "Raj Upadhyay",
