--- a/example/public/manifest.json
+++ b/example/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "react-tailwind-components",
-  "name": "react-tailwind-components",
+  "short_name": "kickass-ui",
+  "name": "kickass-ui",
   "icons": [
     {
       "src": "favicon.ico",
