Renamed and bumped version

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "armony-i",
-  "version": "0.0.1",
+  "name": "kickass-ui",
+  "version": "0.0.2",
   "description": "A React Tailwind Component Library",
   "author": "Raj Upadhyay",
   "license": "MIT",
