--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "@headlessui/react": "^1.7.3",
     "@heroicons/react": "^2.0.12",
     "@tailwindcss/forms": "^0.5.3",
+    "date-fns": "^2.29.3",
     "eslint-plugin-jest": "^27.1.3",
     "eslint-plugin-typescript-sort-keys": "^2.1.0",
     "tsconfig-paths-webpack-plugin": "^4.0.0"
