--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "date-fns": "^2.29.3",
     "eslint-plugin-jest": "^27.1.3",
     "eslint-plugin-typescript-sort-keys": "^2.1.0",
+    "react-hook-form": "^7.43.5",
     "tsconfig-paths-webpack-plugin": "^4.0.0"
   },
   "eslintConfig": {
