--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react": "^18.2.0"
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.6.0",
     "@storybook/addon-actions": "^6.5.13",
     "@storybook/addon-essentials": "^6.5.13",
     "@storybook/addon-interactions": "^6.5.13",
@@ -91,6 +92,7 @@
     "@headlessui/react": "^1.7.3",
     "@heroicons/react": "^2.0.12",
     "@tailwindcss/forms": "^0.5.3",
+    "@tanstack/react-table": "^8.7.9",
     "date-fns": "^2.29.3",
     "eslint-plugin-jest": "^27.1.3",
     "eslint-plugin-typescript-sort-keys": "^2.1.0",
