--- a/package.json
+++ b/package.json
@@ -36,16 +36,6 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^7.6.0",
-    "@storybook/addon-actions": "^6.5.13",
-    "@storybook/addon-essentials": "^6.5.13",
-    "@storybook/addon-interactions": "^6.5.13",
-    "@storybook/addon-links": "^6.5.13",
-    "@storybook/builder-webpack4": "^6.5.13",
-    "@storybook/manager-webpack4": "^6.5.13",
-    "@storybook/node-logger": "^6.5.13",
-    "@storybook/preset-create-react-app": "^3.2.0",
-    "@storybook/react": "^6.5.13",
-    "@storybook/testing-library": "^0.0.13",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
@@ -93,6 +83,7 @@
     "@heroicons/react": "^2.0.12",
     "@tailwindcss/forms": "^0.5.3",
     "@tanstack/react-table": "^8.7.9",
+    "clsx": "^1.2.1",
     "date-fns": "^2.29.3",
     "eslint-plugin-jest": "^27.1.3",
     "eslint-plugin-typescript-sort-keys": "^2.1.0",
